Fixed padding which generated scrollbar at desktop

--- a/css/style.css
+++ b/css/style.css
@@ -244,8 +244,8 @@ ul, li {
 
 @media (min-width: 992px) {
   .site-container {
-    height: 100svh;
-    padding: 1em 2em 0 2em;
+    height: 100lvh;
+    padding: 0.5em 2em 0 2em;
     gap: 0;
   }
   .site-container .nav {
@@ -270,7 +270,7 @@ ul, li {
             justify-content: space-between;
     padding: 0 3.9em;
     width: 100%;
-    height: 5svh;
+    height: 5dvh;
   }
   .site-container .nav .nav-container__close-icon {
     display: none;
@@ -331,17 +331,14 @@ ul, li {
   }
   .site-container .site-body {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    grid-template-columns: 1fr 1fr;
     padding: 2em 0 0 0;
   }
   .site-container .site-body__image-desktop {
     grid-column: 2/3;
     grid-row: 0/1;
-    height: 82.5svh;
-    width: 95%;
+    height: 80lvh;
+    width: 90%;
   }
   .site-container .site-body .description-container {
     grid-column: 1/2;
@@ -353,13 +350,12 @@ ul, li {
         -ms-flex-align: start;
             align-items: start;
     text-align: left;
-    height: 97%;
-    gap: 2.5em 0;
-    padding-top: 9.5em;
+    height: 94%;
+    gap: 2em 0;
+    padding-top: 5em;
   }
   .site-container .site-body .description-container__header {
     font-size: 4.5rem;
-    line-height: 100%;
     padding-right: 1.25em;
   }
   .site-container .site-body .description-container__description {
