--- a/sass/_large-devices.scss
+++ b/sass/_large-devices.scss
@@ -4,8 +4,8 @@
 @use "./mixins" as *;
 @media (min-width: 992px) {
   .site-container {
-    height: 100svh;
-    padding: 1em 2em 0 2em;
+    height: 100lvh;
+    padding: .5em 2em 0 2em;
     gap: 0;
     .nav {
       @include flex-between;
@@ -18,7 +18,7 @@
         @include flex-between;
         padding: 0 3.9em;
         width: 100%;
-        height: 5svh;
+        height: 5dvh;
         &__close-icon {
           display: none;
         }
@@ -69,16 +69,13 @@
     }
     .site-body {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
- 
-      align-items: start;
+      grid-template-columns: 1fr 1fr;
       padding: 2em 0 0 0;
-      
       &__image-desktop {
         grid-column: 2/3;
         grid-row: 0/1;
-        height: 82.5svh;
-        width: 95%;
+        height: 80lvh;
+        width: 90%;
       }
       .description-container {
         grid-column: 1/2;
@@ -86,12 +83,11 @@
         justify-content: end;
         align-items: start;
         text-align: left;
-        height: 97%;
-        gap: 2.5em 0;
-        padding-top: 9.5em;
+        height: 94%;
+        gap: 2em 0;
+        padding-top: 5em;
         &__header {
           font-size: 4.5rem;
-          line-height: 100%;
           padding-right: 1.25em;
         }
         &__description{
